@@ -137,7 +137,7 @@ L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
-© Michal Josef Špaček 2020-2022
+© Michal Josef Špaček 2020-2023
 
 BSD 2-Clause License
 
